# grbresearch

./: .gitignore  080916C.tex  110721A.tex  110731A.tex  131014A.tex  140206B.tex  140602B.tex  150210A.tex  190114C.tex  231129C.tex  BUILD.md  FIGURES.md  README.md  ScatterPlots.py  ToDo.md  environment.yml  experiments.py  generate_table_from_log.py  grb080916C-try.py  grb150210A-try.py  grb_class_exp.py  grb_spectral_catalog.fits  json_script_initial.py  parametr_scatter.py  pyproject.toml  requirements.txt  results.json  scatter_plot.py  showyourwork.yml  time_vs_parameters.py  work.md  working.py  working_unc.py
.github/workflows/: build-paper.yml
GRB080916009/Ep0__1.280_64.256/: BAND.fit  BAND_BB.fit  BAND_PL.fit  BAND_PL_BB.fit  CPL.fit  CPL_BB.fit  CPL_PL.fit  CPL_PL_BB.fit  PL.fit  PL_BB.fit  SBPL.fit  (+3 more)
LAT_analysis/: txt_to_csv.py
Literature Review/: deep research.docx  list of pprs for GRB110721A and GRB080916C.txt  literature review.docx
auxil/: grb_research.aux  grb_research.bbl  grb_research.blg  grb_research.out
codes-for-paper/: best_names.py  best_names.txt  deltaEpeak_kt.py  high_index.parquet  high_index.py  isotropic_energy.py  low_index.parquet  low_index.py  peak_energy.parquet  peak_energy.py
light_curves/: GRB080916C.py  GRB110721A.py  GRB110721A__multiple.py  GRB110731A.py  GRB131014A.py  GRB140206B.py  GRB150210A.py  GRB190114C.py  GRB231129C.py  light_curves.py  make_lightcurve.py
outputs/: GRB080916009_BAND_params.csv  GRB080916009_CPL_params.csv  GRB080916009_SBPL_params.csv
paper/: README.md  environment.yml
src/: __init__.py
(+1070 files in other folders)
