[project]
name = "grbresearchwork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "uncertainties",
    "pandas",
    "seaborn",
    "astropy",
    "scipy",
    "tqdm",
    "black",
    "pyqt6>=6.10.2",
    "plotez>=0.2.1",
]
